# space_sim

./: .gitignore  README.md
black_hole/: .gitignore  CMakeLists.txt  black_hole-2D.sln  black_hole.cpp  black_hole.h  black_hole.vcxproj  camera.cpp  camera.h  engine.cpp  engine.h  grid.cpp  grid.h  main.cpp  ray.cpp  ray.h
black_hole-3D/: .gitignore  black_hole.cpp  black_hole.h  camera.cpp  camera.h  engine.cpp  engine.h  grid.cpp  grid.h  main.cpp  ray.cpp  ray.h
black_hole-3D/shaders/: background.frag  background.vert  grid.frag  grid.vert
black_hole/shaders/: frag.frag  grid.frag  grid.vert  vertex.vert
